# src/main/java/com/ronvel/farztev/admin/controller/dto/ListAlbumType.java
@@ -1,0 +1,144 @@
+package com.ronvel.farztev.admin.controller.dto;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import javax.validation.constraints.*;
+/**
+ * ListAlbumType
+ */
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-03-04T17:13:19.508+01:00")
+
+public class ListAlbumType   {
+  @JsonProperty("id")
+  private Long id = null;
+
+  @JsonProperty("name")
+  private String name = null;
+
+  @JsonProperty("countryId")
+  private Long countryId = null;
+
+  @JsonProperty("countryName")
+  private String countryName = null;
+
+  public ListAlbumType id(Long id) {
+    this.id = id;
+    return this;
+  }
+
+   /**
+   * Get id
+   * @return id
+  **/
+  @ApiModelProperty(example = "1", value = "")
+  public Long getId() {
+    return id;
+  }
+
+  public void setId(Long id) {
+    this.id = id;
+  }
+
+  public ListAlbumType name(String name) {
+    this.name = name;
+    return this;
+  }
+
+   /**
+   * Get name
+   * @return name
+  **/
+  @ApiModelProperty(example = "Patong", value = "")
+  public String getName() {
+    return name;
+  }
+
+  public void setName(String name) {
+    this.name = name;
+  }
+
+  public ListAlbumType countryId(Long countryId) {
+    this.countryId = countryId;
+    return this;
+  }
+
+   /**
+   * Get countryId
+   * @return countryId
+  **/
+  @ApiModelProperty(example = "1", value = "")
+  public Long getCountryId() {
+    return countryId;
+  }
+
+  public void setCountryId(Long countryId) {
+    this.countryId = countryId;
+  }
+
+  public ListAlbumType countryName(String countryName) {
+    this.countryName = countryName;
+    return this;
+  }
+
+   /**
+   * Get countryName
+   * @return countryName
+  **/
+  @ApiModelProperty(example = "Ireland", value = "")
+  public String getCountryName() {
+    return countryName;
+  }
+
+  public void setCountryName(String countryName) {
+    this.countryName = countryName;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    ListAlbumType listAlbumType = (ListAlbumType) o;
+    return Objects.equals(this.id, listAlbumType.id) &&
+        Objects.equals(this.name, listAlbumType.name) &&
+        Objects.equals(this.countryId, listAlbumType.countryId) &&
+        Objects.equals(this.countryName, listAlbumType.countryName);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(id, name, countryId, countryName);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class ListAlbumType {\n");
+    
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("    name: ").append(toIndentedString(name)).append("\n");
+    sb.append("    countryId: ").append(toIndentedString(countryId)).append("\n");
+    sb.append("    countryName: ").append(toIndentedString(countryName)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
